fix: callout icon being misaligned

--- a/src/assets/prose.css
+++ b/src/assets/prose.css
@@ -2,11 +2,11 @@
     margin-top: 5pt;
 }
 
-.prose > p {
+.prose>p {
     line-height: normal;
 }
 
-.prose > blockquote {
+.prose>blockquote {
     margin: 0;
     padding: 5pt;
     padding-left: 15pt;
@@ -15,19 +15,19 @@
     background-color: var(--surface-primary)
 }
 
-.prose > p > img {
+.prose>p>img {
     width: 100%;
     aspect-ratio: 16 / 9;
 }
 
-.prose > .callout {
+.prose>.callout {
     margin: 0;
     background-color: var(--surface-primary);
     border: 2pt solid hsl(30deg, 100%, 30%);
     border-radius: 5pt;
 }
 
-.prose > .callout > .callout-title {
+.prose>.callout>.callout-title {
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -36,11 +36,18 @@
     border-bottom: 2pt dashed hsl(30deg, 100%, 25%);
 }
 
-.prose > .callout > .callout-content {
+.callout-title-icon {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+
+.prose>.callout>.callout-content {
     padding: 5pt 15pt
 }
 
-.prose > .toc {
+.prose>.toc {
     margin: 0;
     padding: 5pt;
     border: 2pt solid hsl(30deg, 100%, 30%);
